image-modify-first

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   
     <div class="half-width">
-      <img src="/images/mosarofphoto.jpg" alt="">
+      <img src="images/first.jpg" alt="photo">
     </div>
   
   </section>
